Solved layout problem

--- a/style.css
+++ b/style.css
@@ -7,6 +7,9 @@ button {
     box-sizing: border-box;
     font-size: 1.5em;
     padding: 0px;
+    border-style: solid;
+    border-width: 1px;
+    border-color: #3C3E3C;
 }
 
 .num-symbol {
@@ -29,9 +32,8 @@ button {
 
 #calculator {
     display: grid;
-    box-sizing: border-box;
-    grid-template-columns: '1fr 1fr 1fr 1fr';
-    grid-template-rows: '1fr 1fr 1fr 1fr 1fr 1fr';
+    grid-template-columns: 1fr 1fr 1fr 1fr;
+    grid-template-rows: 1fr 1fr 1fr 1fr 1fr 1fr;
     gap: '2px 2px';
     grid-template-areas:
         'display display display display'
@@ -42,7 +44,7 @@ button {
         '.       z    point   equals';
     height: 450px;
     width: 350px;
-    background-color: #242423;
+    background-color: #3C3E3C;
     padding:2px;
     font-size: 1em;
 }
